# todo-rust-htmx

./: Cargo.toml  README.md  package-lock.json
assets/: output.css
src/: main.rs
templates/: index.html  task.html
